--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,1 @@
-{
-    "version": 2,
-    "name": "cleaning-agency",
-    "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
-    ]
- }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "index.js" }] }
