--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
+    "name": "cleaning-agency",
     "builds": [
        { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/", "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"] }
+       { "src": "/(.*)", "dest": "/index.js" }
     ]
  }
- 
